[gd_scene load_steps=10 format=3 uid="uid://d2q8r7gda30hl"]

[ext_resource type="PackedScene" uid="uid://1or4eq5w3uoy" path="res://BattleEntity/Player/player.tscn" id="1_3nuks"]
[ext_resource type="Script" path="res://BattleScene/battle_scene.gd" id="1_ghiv6"]
[ext_resource type="Texture2D" uid="uid://rgrgnpaw0lv1" path="res://BattleEntity/battleground and background.png" id="2_a04a8"]
[ext_resource type="PackedScene" uid="uid://b3cfy30i7gunq" path="res://BattleEntity/Enemies/slime.tscn" id="2_b8qel"]
[ext_resource type="Script" path="res://BattleScene/chainer_manager.gd" id="3_76cat"]
[ext_resource type="PackedScene" uid="uid://bmsob22bus8gg" path="res://BattleScene/UI/action_chainer.tscn" id="3_hbeln"]
[ext_resource type="Script" path="res://BattleScene/links_manager.gd" id="4_j0lnd"]
[ext_resource type="Texture2D" uid="uid://bkl3s74qoyv15" path="res://BattleEntity/foreground.png" id="10_elgfk"]
[ext_resource type="Script" path="res://BattleScene/round_init_button.gd" id="12_yiov7"]

[node name="BattleScene" type="Node2D"]
script = ExtResource("1_ghiv6")
metadata/_edit_horizontal_guides_ = [552.0]

[node name="BattlegroundAndBackground" type="Sprite2D" parent="."]
position = Vector2(480, 272)
texture = ExtResource("2_a04a8")

[node name="Player" parent="." instance=ExtResource("1_3nuks")]
position = Vector2(160, 232)

[node name="Slime" parent="." instance=ExtResource("2_b8qel")]
position = Vector2(736, 232)

[node name="ChainerManager" type="Node" parent="."]
script = ExtResource("3_76cat")

[node name="LinksManager" type="GridContainer" parent="ChainerManager"]
offset_left = 576.0
offset_top = 320.0
offset_right = 896.0
offset_bottom = 512.0
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 5
script = ExtResource("4_j0lnd")

[node name="AttackChainer" parent="ChainerManager" instance=ExtResource("3_hbeln")]
offset_left = 128.0
offset_top = 320.0
offset_right = 512.0
offset_bottom = 384.0

[node name="BlockChainer" parent="ChainerManager" instance=ExtResource("3_hbeln")]
offset_left = 128.0
offset_top = 392.0
offset_right = 512.0
offset_bottom = 456.0
chainer_type = 1

[node name="DrawChainer" parent="ChainerManager" instance=ExtResource("3_hbeln")]
offset_left = 128.0
offset_top = 464.0
offset_right = 512.0
offset_bottom = 528.0
chainer_type = 2

[node name="Label" type="Label" parent="ChainerManager"]
offset_left = 72.0
offset_top = 312.0
offset_right = 122.0
offset_bottom = 335.0
text = "Attack"

[node name="Label2" type="Label" parent="ChainerManager"]
offset_left = 72.0
offset_top = 384.0
offset_right = 122.0
offset_bottom = 407.0
text = "Block"

[node name="Label3" type="Label" parent="ChainerManager"]
offset_left = 72.0
offset_top = 456.0
offset_right = 122.0
offset_bottom = 479.0
text = "Draw"

[node name="Foreground" type="Sprite2D" parent="."]
visible = false
position = Vector2(480, 40)
texture = ExtResource("10_elgfk")

[node name="ColorRect" type="ColorRect" parent="."]
offset_top = 288.0
offset_right = 960.0
offset_bottom = 552.0
mouse_filter = 2
color = Color(0.25098, 0.317647, 0.121569, 1)

[node name="RoundInitButton" type="Button" parent="."]
offset_left = 776.0
offset_top = 40.0
offset_right = 928.0
offset_bottom = 104.0
text = "Start Round"
script = ExtResource("12_yiov7")
